--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "LLM Gateway with direct request to provider",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,6 +23,14 @@
   "license": "MIT",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.33.1",
-    "openai": "^4.77.0"
+    "openai": "^4.77.0",
+    "winston": "^3.11.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.5",
+    "typescript": "^5.3.3",
+    "ts-node": "^10.9.2",
+    "jest": "^29.7.0",
+    "@types/jest": "^29.5.11"
   }
 }
