--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/index.js",
     "debug": "node --inspect dist/index.js",
     "test": "jest",
-    "prepublishOnly": "npm run build"
+    "version": "npm version patch",
+    "deploy": "npm publish --access public"
   },
   "keywords": [
     "llm",
